Fix scroll snap issue on safari mobile
ok. i think this actually fixed it this time. adding 'px' to the
panel view height window resize callback seems to have done the
trick. PLEASE WORK PLEASE WORK PLEASE WORK!!!!!!

--- a/style.css
+++ b/style.css
@@ -243,14 +243,15 @@ a::after {
   height: 100vh;
   scroll-snap-align: start;
   position: relative;
-  overflow-y: clip;
+  overflow: clip;
+  /* border-top: 1px solid black; */
+  border-bottom: 1px dashed rgb(226, 226, 226);
 }
 
 .panel-container {
-  max-height: 100vh;
+  max-height: 100vh; 
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
-
 }
 
 .panel-border {
